y.output
Grammar

    0 $accept: Program $end

    1 Program: TDeclBlock GDeclBlock FDefBlock MainBlock
    2        | TDeclBlock GDeclBlock MainBlock
    3        | TDeclBlock MainBlock

    4 GDeclBlock: DECL GDeclList ENDDECL
    5           | DECL ENDDECL

    6 GDeclList: GDeclList GDecl
    7          | GDecl

    8 GDecl: Type GidList ';'

    9 GidList: GidList ',' Gid
   10        | Gid

   11 Gid: ID DimList
   12    | MUL ID
   13    | ID '(' Paramlist ')'
   14    | MUL ID '(' Paramlist ')'

   15 TDeclBlock: TYPE TDeclList ENDTYPE
   16           | %empty

   17 TDeclList: TDeclList TDecl
   18          | TDecl

   19 TDecl: TUPLE ID '{' TIdList '}' ';'

   20 TIdList: TIdList ';' TIdDecl
   21        | TIdDecl

   22 TIdDecl: Type ID

   23 FDefBlock: FDefBlock Fdef
   24          | Fdef

   25 Fdef: Type ID '(' Paramlist ')' '{' LdeclBlock body '}'
   26     | Type MUL ID '(' Paramlist ')' '{' LdeclBlock body '}'

   27 Paramlist: Paramlist ',' ParamDecl
   28          | ParamDecl
   29          | %empty

   30 ParamDecl: Type Param

   31 Param: ID
   32      | MUL ID

   33 LdeclBlock: DECL LDecList ENDDECL
   34           | %empty

   35 LDecList: LDecList LDecl
   36         | LDecl

   37 LDecl: Type IdList ';'

   38 IdList: IdList ',' IdDecl
   39       | IdDecl

   40 IdDecl: ID
   41       | MUL ID

   42 ArgList: ArgList ',' E
   43        | E

   44 MainBlock: Type MAIN '(' ')' '{' LdeclBlock body '}'

   45 body: begin Slist end

   46 Slist: Slist Stmt
   47      | Stmt

   48 Type: INT
   49     | STR
   50     | ID

   51 DimList: DimList '[' NUM ']'
   52        | %empty

   53 InputStmt: READ '(' ID ')' ';'
   54          | READ '(' ID DimAccess ')' ';'
   55          | READ '(' MUL ID ')' ';'

   56 OutputStmt: WRITE '(' E ')' ';'

   57 AsgStmt: ID '=' E ';'
   58        | ID DimAccess '=' E ';'
   59        | MUL ID '=' E ';'
   60        | ID '.' ID '=' E ';'
   61        | ID ARROW ID '=' E ';'

   62 Stmt: InputStmt
   63     | OutputStmt
   64     | AsgStmt
   65     | Ifstmt
   66     | Whilestmt
   67     | DoWhilestmt
   68     | RepeatUntiltstmt
   69     | Jumpstmt
   70     | Debugstmt

   71 Ifstmt: IF '(' E ')' THEN Slist ELSE Slist ENDIF ';'
   72       | IF '(' E ')' THEN Slist ENDIF ';'

   73 Whilestmt: WHILE '(' E ')' DO Slist ENDWHILE ';'

   74 DoWhilestmt: DO Slist WHILE '(' E ')' ';'

   75 RepeatUntiltstmt: REPEAT Slist UNTIL '(' E ')' ';'

   76 Jumpstmt: CONTINUE ';'
   77         | BREAK ';'
   78         | RETURN E ';'

   79 Debugstmt: BREAKPOINT ';'

   80 E: E PLUS E
   81  | E MINUS E
   82  | E DIV E
   83  | E MUL E
   84  | E MOD E
   85  | '(' E ')'
   86  | E GT E
   87  | E LT E
   88  | E GE E
   89  | E LE E
   90  | E NE E
   91  | E EQ E
   92  | E AND E
   93  | E OR E
   94  | ID '.' ID
   95  | ID ARROW ID
   96  | ID '(' ')'
   97  | ID '(' ArgList ')'
   98  | ID
   99  | ID DimAccess
  100  | MUL ID
  101  | '&' ID
  102  | STRING
  103  | NUM
  104  | MINUS NUM

  105 DimAccess: DimAccess '[' E ']'
  106          | '[' E ']'


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 101
    '(' (40) 13 14 25 26 44 53 54 55 56 71 72 73 74 75 85 96 97
    ')' (41) 13 14 25 26 44 53 54 55 56 71 72 73 74 75 85 96 97
    ',' (44) 9 27 38 42
    '.' (46) 60 94
    ';' (59) 8 19 20 37 53 54 55 56 57 58 59 60 61 71 72 73 74 75 76 77 78 79
    '=' (61) 57 58 59 60 61
    '[' (91) 51 105 106
    ']' (93) 51 105 106
    '{' (123) 19 25 26 44
    '}' (125) 19 25 26 44
    error (256)
    WRITE <node> (258) 56
    READ <node> (259) 53 54 55
    INT <node> (260) 48
    STR <node> (261) 49
    ID <node> (262) 11 12 13 14 19 22 25 26 31 32 40 41 50 53 54 55 57 58 59 60 61 94 95 96 97 98 99 100 101
    NUM <node> (263) 51 103 104
    STRING <string> (264) 102
    begin (265) 45
    end (266) 45
    MAIN (267) 44
    DECL (268) 4 5 33
    ENDDECL (269) 4 5 33
    TYPE (270) 15
    ENDTYPE (271) 15
    TUPLE (272) 19
    PLUS (273) 80
    MINUS (274) 81 104
    DIV (275) 82
    MUL (276) 12 14 26 32 41 55 59 83 100
    ARROW (277) 61 95
    IF (278) 71 72
    THEN (279) 71 72
    ELSE (280) 71
    ENDIF (281) 71 72
    WHILE (282) 73 74
    DO (283) 73 74
    ENDWHILE (284) 73
    REPEAT (285) 75
    UNTIL (286) 75
    CONTINUE (287) 76
    BREAK (288) 77
    RETURN (289) 78
    BREAKPOINT (290) 79
    GT (291) 86
    GE (292) 88
    LT (293) 87
    LE (294) 89
    NE (295) 90
    EQ (296) 91
    AND (297) 92
    OR (298) 93
    MOD (299) 84


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    Program <node> (57)
        on left: 1 2 3
        on right: 0
    GDeclBlock (58)
        on left: 4 5
        on right: 1 2
    GDeclList (59)
        on left: 6 7
        on right: 4 6
    GDecl (60)
        on left: 8
        on right: 6 7
    GidList <gsymbol> (61)
        on left: 9 10
        on right: 8 9
    Gid <gsymbol> (62)
        on left: 11 12 13 14
        on right: 9 10
    TDeclBlock (63)
        on left: 15 16
        on right: 1 2 3
    TDeclList (64)
        on left: 17 18
        on right: 15 17
    TDecl (65)
        on left: 19
        on right: 17 18
    TIdList <plist> (66)
        on left: 20 21
        on right: 19 20
    TIdDecl <plist> (67)
        on left: 22
        on right: 20 21
    FDefBlock <node> (68)
        on left: 23 24
        on right: 1 23
    Fdef (69)
        on left: 25 26
        on right: 23 24
    Paramlist <plist> (70)
        on left: 27 28 29
        on right: 13 14 25 26 27
    ParamDecl <plist> (71)
        on left: 30
        on right: 27 28
    Param <plist> (72)
        on left: 31 32
        on right: 30
    LdeclBlock <lsymbol> (73)
        on left: 33 34
        on right: 25 26 44
    LDecList <lsymbol> (74)
        on left: 35 36
        on right: 33 35
    LDecl <lsymbol> (75)
        on left: 37
        on right: 35 36
    IdList <lsymbol> (76)
        on left: 38 39
        on right: 37 38
    IdDecl <lsymbol> (77)
        on left: 40 41
        on right: 38 39
    ArgList <node> (78)
        on left: 42 43
        on right: 42 97
    MainBlock <node> (79)
        on left: 44
        on right: 1 2 3
    body <node> (80)
        on left: 45
        on right: 25 26 44
    Slist <node> (81)
        on left: 46 47
        on right: 45 46 71 72 73 74 75
    Type <type> (82)
        on left: 48 49 50
        on right: 8 22 25 26 30 37 44
    DimList <DimList> (83)
        on left: 51 52
        on right: 11 51
    InputStmt <node> (84)
        on left: 53 54 55
        on right: 62
    OutputStmt <node> (85)
        on left: 56
        on right: 63
    AsgStmt <node> (86)
        on left: 57 58 59 60 61
        on right: 64
    Stmt <node> (87)
        on left: 62 63 64 65 66 67 68 69 70
        on right: 46 47
    Ifstmt <node> (88)
        on left: 71 72
        on right: 65
    Whilestmt <node> (89)
        on left: 73
        on right: 66
    DoWhilestmt <node> (90)
        on left: 74
        on right: 67
    RepeatUntiltstmt <node> (91)
        on left: 75
        on right: 68
    Jumpstmt <node> (92)
        on left: 76 77 78
        on right: 69
    Debugstmt <node> (93)
        on left: 79
        on right: 70
    E <node> (94)
        on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
        on right: 42 43 56 57 58 59 60 61 71 72 73 74 75 78 80 81 82 83 84 85 86 87 88 89 90 91 92 93 105 106
    DimAccess <DimList> (95)
        on left: 105 106
        on right: 54 58 99 105


State 0

    0 $accept: . Program $end

    TYPE  shift, and go to state 1

    $default  reduce using rule 16 (TDeclBlock)

    Program     go to state 2
    TDeclBlock  go to state 3


State 1

   15 TDeclBlock: TYPE . TDeclList ENDTYPE

    TUPLE  shift, and go to state 4

    TDeclList  go to state 5
    TDecl      go to state 6


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 3

    1 Program: TDeclBlock . GDeclBlock FDefBlock MainBlock
    2        | TDeclBlock . GDeclBlock MainBlock
    3        | TDeclBlock . MainBlock

    INT   shift, and go to state 8
    STR   shift, and go to state 9
    ID    shift, and go to state 10
    DECL  shift, and go to state 11

    GDeclBlock  go to state 12
    MainBlock   go to state 13
    Type        go to state 14


State 4

   19 TDecl: TUPLE . ID '{' TIdList '}' ';'

    ID  shift, and go to state 15


State 5

   15 TDeclBlock: TYPE TDeclList . ENDTYPE
   17 TDeclList: TDeclList . TDecl

    ENDTYPE  shift, and go to state 16
    TUPLE    shift, and go to state 4

    TDecl  go to state 17


State 6

   18 TDeclList: TDecl .

    $default  reduce using rule 18 (TDeclList)


State 7

    0 $accept: Program $end .

    $default  accept


State 8

   48 Type: INT .

    $default  reduce using rule 48 (Type)


State 9

   49 Type: STR .

    $default  reduce using rule 49 (Type)


State 10

   50 Type: ID .

    $default  reduce using rule 50 (Type)


State 11

    4 GDeclBlock: DECL . GDeclList ENDDECL
    5           | DECL . ENDDECL

    INT      shift, and go to state 8
    STR      shift, and go to state 9
    ID       shift, and go to state 10
    ENDDECL  shift, and go to state 18

    GDeclList  go to state 19
    GDecl      go to state 20
    Type       go to state 21


State 12

    1 Program: TDeclBlock GDeclBlock . FDefBlock MainBlock
    2        | TDeclBlock GDeclBlock . MainBlock

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    FDefBlock  go to state 22
    Fdef       go to state 23
    MainBlock  go to state 24
    Type       go to state 25


State 13

    3 Program: TDeclBlock MainBlock .

    $default  reduce using rule 3 (Program)


State 14

   44 MainBlock: Type . MAIN '(' ')' '{' LdeclBlock body '}'

    MAIN  shift, and go to state 26


State 15

   19 TDecl: TUPLE ID . '{' TIdList '}' ';'

    '{'  shift, and go to state 27


State 16

   15 TDeclBlock: TYPE TDeclList ENDTYPE .

    $default  reduce using rule 15 (TDeclBlock)


State 17

   17 TDeclList: TDeclList TDecl .

    $default  reduce using rule 17 (TDeclList)


State 18

    5 GDeclBlock: DECL ENDDECL .

    $default  reduce using rule 5 (GDeclBlock)


State 19

    4 GDeclBlock: DECL GDeclList . ENDDECL
    6 GDeclList: GDeclList . GDecl

    INT      shift, and go to state 8
    STR      shift, and go to state 9
    ID       shift, and go to state 10
    ENDDECL  shift, and go to state 28

    GDecl  go to state 29
    Type   go to state 21


State 20

    7 GDeclList: GDecl .

    $default  reduce using rule 7 (GDeclList)


State 21

    8 GDecl: Type . GidList ';'

    ID   shift, and go to state 30
    MUL  shift, and go to state 31

    GidList  go to state 32
    Gid      go to state 33


State 22

    1 Program: TDeclBlock GDeclBlock FDefBlock . MainBlock
   23 FDefBlock: FDefBlock . Fdef

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    Fdef       go to state 34
    MainBlock  go to state 35
    Type       go to state 25


State 23

   24 FDefBlock: Fdef .

    $default  reduce using rule 24 (FDefBlock)


State 24

    2 Program: TDeclBlock GDeclBlock MainBlock .

    $default  reduce using rule 2 (Program)


State 25

   25 Fdef: Type . ID '(' Paramlist ')' '{' LdeclBlock body '}'
   26     | Type . MUL ID '(' Paramlist ')' '{' LdeclBlock body '}'
   44 MainBlock: Type . MAIN '(' ')' '{' LdeclBlock body '}'

    ID    shift, and go to state 36
    MAIN  shift, and go to state 26
    MUL   shift, and go to state 37


State 26

   44 MainBlock: Type MAIN . '(' ')' '{' LdeclBlock body '}'

    '('  shift, and go to state 38


State 27

   19 TDecl: TUPLE ID '{' . TIdList '}' ';'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    TIdList  go to state 39
    TIdDecl  go to state 40
    Type     go to state 41


State 28

    4 GDeclBlock: DECL GDeclList ENDDECL .

    $default  reduce using rule 4 (GDeclBlock)


State 29

    6 GDeclList: GDeclList GDecl .

    $default  reduce using rule 6 (GDeclList)


State 30

   11 Gid: ID . DimList
   13    | ID . '(' Paramlist ')'

    '('  shift, and go to state 42

    $default  reduce using rule 52 (DimList)

    DimList  go to state 43


State 31

   12 Gid: MUL . ID
   14    | MUL . ID '(' Paramlist ')'

    ID  shift, and go to state 44


State 32

    8 GDecl: Type GidList . ';'
    9 GidList: GidList . ',' Gid

    ';'  shift, and go to state 45
    ','  shift, and go to state 46


State 33

   10 GidList: Gid .

    $default  reduce using rule 10 (GidList)


State 34

   23 FDefBlock: FDefBlock Fdef .

    $default  reduce using rule 23 (FDefBlock)


State 35

    1 Program: TDeclBlock GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 1 (Program)


State 36

   25 Fdef: Type ID . '(' Paramlist ')' '{' LdeclBlock body '}'

    '('  shift, and go to state 47


State 37

   26 Fdef: Type MUL . ID '(' Paramlist ')' '{' LdeclBlock body '}'

    ID  shift, and go to state 48


State 38

   44 MainBlock: Type MAIN '(' . ')' '{' LdeclBlock body '}'

    ')'  shift, and go to state 49


State 39

   19 TDecl: TUPLE ID '{' TIdList . '}' ';'
   20 TIdList: TIdList . ';' TIdDecl

    ';'  shift, and go to state 50
    '}'  shift, and go to state 51


State 40

   21 TIdList: TIdDecl .

    $default  reduce using rule 21 (TIdList)


State 41

   22 TIdDecl: Type . ID

    ID  shift, and go to state 52


State 42

   13 Gid: ID '(' . Paramlist ')'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    $default  reduce using rule 29 (Paramlist)

    Paramlist  go to state 53
    ParamDecl  go to state 54
    Type       go to state 55


State 43

   11 Gid: ID DimList .
   51 DimList: DimList . '[' NUM ']'

    '['  shift, and go to state 56

    $default  reduce using rule 11 (Gid)


State 44

   12 Gid: MUL ID .
   14    | MUL ID . '(' Paramlist ')'

    '('  shift, and go to state 57

    $default  reduce using rule 12 (Gid)


State 45

    8 GDecl: Type GidList ';' .

    $default  reduce using rule 8 (GDecl)


State 46

    9 GidList: GidList ',' . Gid

    ID   shift, and go to state 30
    MUL  shift, and go to state 31

    Gid  go to state 58


State 47

   25 Fdef: Type ID '(' . Paramlist ')' '{' LdeclBlock body '}'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    $default  reduce using rule 29 (Paramlist)

    Paramlist  go to state 59
    ParamDecl  go to state 54
    Type       go to state 55


State 48

   26 Fdef: Type MUL ID . '(' Paramlist ')' '{' LdeclBlock body '}'

    '('  shift, and go to state 60


State 49

   44 MainBlock: Type MAIN '(' ')' . '{' LdeclBlock body '}'

    '{'  shift, and go to state 61


State 50

   20 TIdList: TIdList ';' . TIdDecl

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    TIdDecl  go to state 62
    Type     go to state 41


State 51

   19 TDecl: TUPLE ID '{' TIdList '}' . ';'

    ';'  shift, and go to state 63


State 52

   22 TIdDecl: Type ID .

    $default  reduce using rule 22 (TIdDecl)


State 53

   13 Gid: ID '(' Paramlist . ')'
   27 Paramlist: Paramlist . ',' ParamDecl

    ','  shift, and go to state 64
    ')'  shift, and go to state 65


State 54

   28 Paramlist: ParamDecl .

    $default  reduce using rule 28 (Paramlist)


State 55

   30 ParamDecl: Type . Param

    ID   shift, and go to state 66
    MUL  shift, and go to state 67

    Param  go to state 68


State 56

   51 DimList: DimList '[' . NUM ']'

    NUM  shift, and go to state 69


State 57

   14 Gid: MUL ID '(' . Paramlist ')'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    $default  reduce using rule 29 (Paramlist)

    Paramlist  go to state 70
    ParamDecl  go to state 54
    Type       go to state 55


State 58

    9 GidList: GidList ',' Gid .

    $default  reduce using rule 9 (GidList)


State 59

   25 Fdef: Type ID '(' Paramlist . ')' '{' LdeclBlock body '}'
   27 Paramlist: Paramlist . ',' ParamDecl

    ','  shift, and go to state 64
    ')'  shift, and go to state 71


State 60

   26 Fdef: Type MUL ID '(' . Paramlist ')' '{' LdeclBlock body '}'

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    $default  reduce using rule 29 (Paramlist)

    Paramlist  go to state 72
    ParamDecl  go to state 54
    Type       go to state 55


State 61

   44 MainBlock: Type MAIN '(' ')' '{' . LdeclBlock body '}'

    DECL  shift, and go to state 73

    $default  reduce using rule 34 (LdeclBlock)

    LdeclBlock  go to state 74


State 62

   20 TIdList: TIdList ';' TIdDecl .

    $default  reduce using rule 20 (TIdList)


State 63

   19 TDecl: TUPLE ID '{' TIdList '}' ';' .

    $default  reduce using rule 19 (TDecl)


State 64

   27 Paramlist: Paramlist ',' . ParamDecl

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    ParamDecl  go to state 75
    Type       go to state 55


State 65

   13 Gid: ID '(' Paramlist ')' .

    $default  reduce using rule 13 (Gid)


State 66

   31 Param: ID .

    $default  reduce using rule 31 (Param)


State 67

   32 Param: MUL . ID

    ID  shift, and go to state 76


State 68

   30 ParamDecl: Type Param .

    $default  reduce using rule 30 (ParamDecl)


State 69

   51 DimList: DimList '[' NUM . ']'

    ']'  shift, and go to state 77


State 70

   14 Gid: MUL ID '(' Paramlist . ')'
   27 Paramlist: Paramlist . ',' ParamDecl

    ','  shift, and go to state 64
    ')'  shift, and go to state 78


State 71

   25 Fdef: Type ID '(' Paramlist ')' . '{' LdeclBlock body '}'

    '{'  shift, and go to state 79


State 72

   26 Fdef: Type MUL ID '(' Paramlist . ')' '{' LdeclBlock body '}'
   27 Paramlist: Paramlist . ',' ParamDecl

    ','  shift, and go to state 64
    ')'  shift, and go to state 80


State 73

   33 LdeclBlock: DECL . LDecList ENDDECL

    INT  shift, and go to state 8
    STR  shift, and go to state 9
    ID   shift, and go to state 10

    LDecList  go to state 81
    LDecl     go to state 82
    Type      go to state 83


State 74

   44 MainBlock: Type MAIN '(' ')' '{' LdeclBlock . body '}'

    begin  shift, and go to state 84

    body  go to state 85


State 75

   27 Paramlist: Paramlist ',' ParamDecl .

    $default  reduce using rule 27 (Paramlist)


State 76

   32 Param: MUL ID .

    $default  reduce using rule 32 (Param)


State 77

   51 DimList: DimList '[' NUM ']' .

    $default  reduce using rule 51 (DimList)


State 78

   14 Gid: MUL ID '(' Paramlist ')' .

    $default  reduce using rule 14 (Gid)


State 79

   25 Fdef: Type ID '(' Paramlist ')' '{' . LdeclBlock body '}'

    DECL  shift, and go to state 73

    $default  reduce using rule 34 (LdeclBlock)

    LdeclBlock  go to state 86


State 80

   26 Fdef: Type MUL ID '(' Paramlist ')' . '{' LdeclBlock body '}'

    '{'  shift, and go to state 87


State 81

   33 LdeclBlock: DECL LDecList . ENDDECL
   35 LDecList: LDecList . LDecl

    INT      shift, and go to state 8
    STR      shift, and go to state 9
    ID       shift, and go to state 10
    ENDDECL  shift, and go to state 88

    LDecl  go to state 89
    Type   go to state 83


State 82

   36 LDecList: LDecl .

    $default  reduce using rule 36 (LDecList)


State 83

   37 LDecl: Type . IdList ';'

    ID   shift, and go to state 90
    MUL  shift, and go to state 91

    IdList  go to state 92
    IdDecl  go to state 93


State 84

   45 body: begin . Slist end

    WRITE       shift, and go to state 94
    READ        shift, and go to state 95
    ID          shift, and go to state 96
    MUL         shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 99
    DO          shift, and go to state 100
    REPEAT      shift, and go to state 101
    CONTINUE    shift, and go to state 102
    BREAK       shift, and go to state 103
    RETURN      shift, and go to state 104
    BREAKPOINT  shift, and go to state 105

    Slist             go to state 106
    InputStmt         go to state 107
    OutputStmt        go to state 108
    AsgStmt           go to state 109
    Stmt              go to state 110
    Ifstmt            go to state 111
    Whilestmt         go to state 112
    DoWhilestmt       go to state 113
    RepeatUntiltstmt  go to state 114
    Jumpstmt          go to state 115
    Debugstmt         go to state 116


State 85

   44 MainBlock: Type MAIN '(' ')' '{' LdeclBlock body . '}'

    '}'  shift, and go to state 117


State 86

   25 Fdef: Type ID '(' Paramlist ')' '{' LdeclBlock . body '}'

    begin  shift, and go to state 84

    body  go to state 118


State 87

   26 Fdef: Type MUL ID '(' Paramlist ')' '{' . LdeclBlock body '}'

    DECL  shift, and go to state 73

    $default  reduce using rule 34 (LdeclBlock)

    LdeclBlock  go to state 119


State 88

   33 LdeclBlock: DECL LDecList ENDDECL .

    $default  reduce using rule 33 (LdeclBlock)


State 89

   35 LDecList: LDecList LDecl .

    $default  reduce using rule 35 (LDecList)


State 90

   40 IdDecl: ID .

    $default  reduce using rule 40 (IdDecl)


State 91

   41 IdDecl: MUL . ID

    ID  shift, and go to state 120


State 92

   37 LDecl: Type IdList . ';'
   38 IdList: IdList . ',' IdDecl

    ';'  shift, and go to state 121
    ','  shift, and go to state 122


State 93

   39 IdList: IdDecl .

    $default  reduce using rule 39 (IdList)


State 94

   56 OutputStmt: WRITE . '(' E ')' ';'

    '('  shift, and go to state 123


State 95

   53 InputStmt: READ . '(' ID ')' ';'
   54          | READ . '(' ID DimAccess ')' ';'
   55          | READ . '(' MUL ID ')' ';'

    '('  shift, and go to state 124


State 96

   57 AsgStmt: ID . '=' E ';'
   58        | ID . DimAccess '=' E ';'
   60        | ID . '.' ID '=' E ';'
   61        | ID . ARROW ID '=' E ';'

    ARROW  shift, and go to state 125
    '['    shift, and go to state 126
    '='    shift, and go to state 127
    '.'    shift, and go to state 128

    DimAccess  go to state 129


State 97

   59 AsgStmt: MUL . ID '=' E ';'

    ID  shift, and go to state 130


State 98

   71 Ifstmt: IF . '(' E ')' THEN Slist ELSE Slist ENDIF ';'
   72       | IF . '(' E ')' THEN Slist ENDIF ';'

    '('  shift, and go to state 131


State 99

   73 Whilestmt: WHILE . '(' E ')' DO Slist ENDWHILE ';'

    '('  shift, and go to state 132


State 100

   74 DoWhilestmt: DO . Slist WHILE '(' E ')' ';'

    WRITE       shift, and go to state 94
    READ        shift, and go to state 95
    ID          shift, and go to state 96
    MUL         shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 99
    DO          shift, and go to state 100
    REPEAT      shift, and go to state 101
    CONTINUE    shift, and go to state 102
    BREAK       shift, and go to state 103
    RETURN      shift, and go to state 104
    BREAKPOINT  shift, and go to state 105

    Slist             go to state 133
    InputStmt         go to state 107
    OutputStmt        go to state 108
    AsgStmt           go to state 109
    Stmt              go to state 110
    Ifstmt            go to state 111
    Whilestmt         go to state 112
    DoWhilestmt       go to state 113
    RepeatUntiltstmt  go to state 114
    Jumpstmt          go to state 115
    Debugstmt         go to state 116


State 101

   75 RepeatUntiltstmt: REPEAT . Slist UNTIL '(' E ')' ';'

    WRITE       shift, and go to state 94
    READ        shift, and go to state 95
    ID          shift, and go to state 96
    MUL         shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 99
    DO          shift, and go to state 100
    REPEAT      shift, and go to state 101
    CONTINUE    shift, and go to state 102
    BREAK       shift, and go to state 103
    RETURN      shift, and go to state 104
    BREAKPOINT  shift, and go to state 105

    Slist             go to state 134
    InputStmt         go to state 107
    OutputStmt        go to state 108
    AsgStmt           go to state 109
    Stmt              go to state 110
    Ifstmt            go to state 111
    Whilestmt         go to state 112
    DoWhilestmt       go to state 113
    RepeatUntiltstmt  go to state 114
    Jumpstmt          go to state 115
    Debugstmt         go to state 116


State 102

   76 Jumpstmt: CONTINUE . ';'

    ';'  shift, and go to state 135


State 103

   77 Jumpstmt: BREAK . ';'

    ';'  shift, and go to state 136


State 104

   78 Jumpstmt: RETURN . E ';'

    ID      shift, and go to state 137
    NUM     shift, and go to state 138
    STRING  shift, and go to state 139
    MINUS   shift, and go to state 140
    MUL     shift, and go to state 141
    '('     shift, and go to state 142
    '&'     shift, and go to state 143

    E  go to state 144


State 105

   79 Debugstmt: BREAKPOINT . ';'

    ';'  shift, and go to state 145


State 106

   45 body: begin Slist . end
   46 Slist: Slist . Stmt

    WRITE       shift, and go to state 94
    READ        shift, and go to state 95
    ID          shift, and go to state 96
    end         shift, and go to state 146
    MUL         shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 99
    DO          shift, and go to state 100
    REPEAT      shift, and go to state 101
    CONTINUE    shift, and go to state 102
    BREAK       shift, and go to state 103
    RETURN      shift, and go to state 104
    BREAKPOINT  shift, and go to state 105

    InputStmt         go to state 107
    OutputStmt        go to state 108
    AsgStmt           go to state 109
    Stmt              go to state 147
    Ifstmt            go to state 111
    Whilestmt         go to state 112
    DoWhilestmt       go to state 113
    RepeatUntiltstmt  go to state 114
    Jumpstmt          go to state 115
    Debugstmt         go to state 116


State 107

   62 Stmt: InputStmt .

    $default  reduce using rule 62 (Stmt)


State 108

   63 Stmt: OutputStmt .

    $default  reduce using rule 63 (Stmt)


State 109

   64 Stmt: AsgStmt .

    $default  reduce using rule 64 (Stmt)


State 110

   47 Slist: Stmt .

    $default  reduce using rule 47 (Slist)


State 111

   65 Stmt: Ifstmt .

    $default  reduce using rule 65 (Stmt)


State 112

   66 Stmt: Whilestmt .

    $default  reduce using rule 66 (Stmt)


State 113

   67 Stmt: DoWhilestmt .

    $default  reduce using rule 67 (Stmt)


State 114

   68 Stmt: RepeatUntiltstmt .

    $default  reduce using rule 68 (Stmt)


State 115

   69 Stmt: Jumpstmt .

    $default  reduce using rule 69 (Stmt)


State 116

   70 Stmt: Debugstmt .

    $default  reduce using rule 70 (Stmt)


State 117

   44 MainBlock: Type MAIN '(' ')' '{' LdeclBlock body '}' .

    $default  reduce using rule 44 (MainBlock)


State 118

   25 Fdef: Type ID '(' Paramlist ')' '{' LdeclBlock body . '}'

    '}'  shift, and go to state 148


State 119

   26 Fdef: Type MUL ID '(' Paramlist ')' '{' LdeclBlock . body '}'

    begin  shift, and go to state 84

    body  go to state 149


State 120

   41 IdDecl: MUL ID .

    $default  reduce using rule 41 (IdDecl)


State 121

   37 LDecl: Type IdList ';' .

    $default  reduce using rule 37 (LDecl)


State 122

   38 IdList: IdList ',' . IdDecl

    ID   shift, and go to state 90
    MUL  shift, and go to state 91

    IdDecl  go to state 150


State 123

   56 OutputStmt: WRITE '(' . E ')' ';'

    ID      shift, and go to state 137
    NUM     shift, and go to state 138
    STRING  shift, and go to state 139
    MINUS   shift, and go to state 140
    MUL     shift, and go to state 141
    '('     shift, and go to state 142
    '&'     shift, and go to state 143

    E  go to state 151


State 124

   53 InputStmt: READ '(' . ID ')' ';'
   54          | READ '(' . ID DimAccess ')' ';'
   55          | READ '(' . MUL ID ')' ';'

    ID   shift, and go to state 152
    MUL  shift, and go to state 153


State 125

   61 AsgStmt: ID ARROW . ID '=' E ';'

    ID  shift, and go to state 154


State 126

  106 DimAccess: '[' . E ']'

    ID      shift, and go to state 137
    NUM     shift, and go to state 138
    STRING  shift, and go to state 139
    MINUS   shift, and go to state 140
    MUL     shift, and go to state 141
    '('     shift, and go to state 142
    '&'     shift, and go to state 143

    E  go to state 155


State 127

   57 AsgStmt: ID '=' . E ';'

    ID      shift, and go to state 137
    NUM     shift, and go to state 138
    STRING  shift, and go to state 139
    MINUS   shift, and go to state 140
    MUL     shift, and go to state 141
    '('     shift, and go to state 142
    '&'     shift, and go to state 143

    E  go to state 156


State 128

   60 AsgStmt: ID '.' . ID '=' E ';'

    ID  shift, and go to state 157


State 129

   58 AsgStmt: ID DimAccess . '=' E ';'
  105 DimAccess: DimAccess . '[' E ']'

    '['  shift, and go to state 158
    '='  shift, and go to state 159


State 130

   59 AsgStmt: MUL ID . '=' E ';'

    '='  shift, and go to state 160


State 131

   71 Ifstmt: IF '(' . E ')' THEN Slist ELSE Slist ENDIF ';'
   72       | IF '(' . E ')' THEN Slist ENDIF ';'

    ID      shift, and go to state 137
    NUM     shift, and go to state 138
    STRING  shift, and go to state 139
    MINUS   shift, and go to state 140
    MUL     shift, and go to state 141
    '('     shift, and go to state 142
    '&'     shift, and go to state 143

    E  go to state 161


State 132

   73 Whilestmt: WHILE '(' . E ')' DO Slist ENDWHILE ';'

    ID      shift, and go to state 137
    NUM     shift, and go to state 138
    STRING  shift, and go to state 139
    MINUS   shift, and go to state 140
    MUL     shift, and go to state 141
    '('     shift, and go to state 142
    '&'     shift, and go to state 143

    E  go to state 162


State 133

   46 Slist: Slist . Stmt
   74 DoWhilestmt: DO Slist . WHILE '(' E ')' ';'

    WRITE       shift, and go to state 94
    READ        shift, and go to state 95
    ID          shift, and go to state 96
    MUL         shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 163
    DO          shift, and go to state 100
    REPEAT      shift, and go to state 101
    CONTINUE    shift, and go to state 102
    BREAK       shift, and go to state 103
    RETURN      shift, and go to state 104
    BREAKPOINT  shift, and go to state 105

    InputStmt         go to state 107
    OutputStmt        go to state 108
    AsgStmt           go to state 109
    Stmt              go to state 147
    Ifstmt            go to state 111
    Whilestmt         go to state 112
    DoWhilestmt       go to state 113
    RepeatUntiltstmt  go to state 114
    Jumpstmt          go to state 115
    Debugstmt         go to state 116


State 134

   46 Slist: Slist . Stmt
   75 RepeatUntiltstmt: REPEAT Slist . UNTIL '(' E ')' ';'

    WRITE       shift, and go to state 94
    READ        shift, and go to state 95
    ID          shift, and go to state 96
    MUL         shift, and go to state 97
    IF          shift, and go to state 98
    WHILE       shift, and go to state 99
    DO          shift, and go to state 100
    REPEAT      shift, and go to state 101
    UNTIL       shift, and go to state 164
    CONTINUE    shift, and go to state 102
    BREAK       shift, and go to state 103
    RETURN      shift, and go to state 104
    BREAKPOINT  shift, and go to state 105
